[package]
name = "war_and_economy"
version = "0.1.1"
edition = "2021"

[dependencies]
war_economy_core = { path = "game core" }
core_interface = { path = "core interface" }

glium = "0.32.1"
winit = "0.27.5"

[workspace]
members = ["game core", "core interface"]

[profile.release]
strip = "symbols"
codegen-units = 1
opt-level = "s"
lto = true
